# trading-streaming-example

./: README.md  docker-compose.yml
data-svc/: Dockerfile  Makefile  pyproject.toml
data-svc/src/data_svc/: kafka_utils.py  server.py
data-svc/tests/: test_graphql.py
gateway/: .meshrc.yaml  Dockerfile  gateway.config.ts  package.json  tsconfig.json
news-svc/: Dockerfile  pyproject.toml
news-svc/src/news_svc/: examples.py  kafka_utils.py  server.py
news-svc/tests/: test_graphql.py
position-svc/: Dockerfile  pyproject.toml
position-svc/src/position_svc/: server.py
position-svc/tests/: test_graphql.py
ui-app/: .gitignore  Dockerfile  codegen.ts  package-lock.json  package.json  vitest.config.ts
ui-app/src/app/: globals.css  layout.tsx  page.tsx
ui-app/src/components/: ApolloWrapper.tsx  NewsFeed.tsx  PositionsPanel.tsx  RiskPanel.tsx  StockGrid.tsx
ui-app/src/gql/: gql.ts  graphql.ts
